src/objects/E2_Estimate_Rate_Card__c.object
<CustomObject>
    <description>Object stores cloned copy of rate card for all resources with modified bill rate of related presales estimate.</description>
    <fields>
        <fullName>Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Rate__c</fullName>
        <label>Discounted Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipLabel>Estimate Rate Cards</relationshipLabel>
        <relationshipName>Estimate_Rate_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Practice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Estimate Rate Cards</relationshipLabel>
        <relationshipName>Estimate_Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Resource region from rate card region lookup</description>
        <label>Region</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Cost__c</fullName>
        <label>Resource Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <label>Resource Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Estimate Rate Card</label>
    <nameField>
        <displayFormat>ERC-{0000}</displayFormat>
        <label>Estimate Rate Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimate Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>